@@ -1,7 +1,11 @@
 package com.rest.api.auth.jwt;
 
+import domain.auth.Token.response.ValidRefreshTokenResponse;
 import io.jsonwebtoken.*;
-import io.jsonwebtoken.security.Keys;
+
+import jakarta.annotation.PostConstruct;
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -12,9 +16,6 @@ import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Component;
 
-import javax.xml.bind.DatatypeConverter;
-import java.nio.charset.StandardCharsets;
-import java.security.Key;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -22,40 +23,56 @@ import java.util.stream.Collectors;
 @Component
 public class JwtTokenProvider {
 
-    private final Key key;
-    private long accessTokenValidityInMilliseconds = 100*60*30; // 30분
-    private long refreshTokenValidityInMilliseconds = 100*60*30*2;  // 2일
+    @Value("${spring.security.jwt.secret}")
+    private String secretKey;
+    public static final long ACCESS_TOKEN_VALIDITY_IN_MILLISECONDS = 100*60*30; // 30분
+    public static final long REFRESH_TOKEN_VALIDITY_IN_MILLISECONDS = 100*60*30*14;  // 2주
+    final static public String ACCESS_TOKEN_NAME = "accessToken";
+    final static public String REFRESH_TOKEN_NAME = "refreshToken";
 
-    public JwtTokenProvider(@Value("${spring.security.jwt.secret}") String secretKey) {
-        byte[] secretByteKey = DatatypeConverter.parseBase64Binary(secretKey);
-        this.key = Keys.hmacShaKeyFor(secretByteKey);
+    @PostConstruct
+    protected void init() {
+        secretKey = Base64.getEncoder().encodeToString(secretKey.getBytes());
+    }
+
+    public ValidRefreshTokenResponse validateRefreshToken(String accessToken, String refreshToken)
+    {
+        List<Object> findInfo = redisService.getListValue(refreshToken);
+        String providerUserId = getProviderUserId(accessToken);
+        if (findInfo.size() < 2) {
+            return new ValidRefreshTokenResponse(null, 401, null);
+        }
+        if (providerUserId.equals(findInfo.get(0)) && validateToken(refreshToken))
+        {
+            UserDetails findMember = userDetailsService.loadUserByUsername((String)findInfo.get(0));
+            List<String> roles = findMember.getAuthorities().stream().map(authority -> authority.getAuthority()).collect(Collectors.toList());
+            String newAccessToken = generateAccessToken((String)findInfo.get(0), roles);
+            return new ValidRefreshTokenResponse((String)findInfo.get(0), 200, newAccessToken);
+        }
+        return new ValidRefreshTokenResponse(null, 403, null);
     }
 
     public String generateAccessToken(String payload) {
-        String acces_token = generateToken(payload, accessTokenValidityInMilliseconds);
+        Claims claims = Jwts.claims().setSubject(payload);
+        Date now = new Date();
+        String accessToken = Jwts.builder()
+                .setClaims(claims) // 데이터
+                .setIssuedAt(now) // 토큰 발행일자
+                .setExpiration(new Date(now.getTime() +  ACCESS_TOKEN_VALIDITY_IN_MILLISECONDS)) // set Expire Time
+                .signWith(SignatureAlgorithm.HS256, secretKey) // 암호화 알고리즘, secret값 세팅
+                .compact();
 
-        return acces_token;
+        return accessToken;
     }
 
     public String generateRefreshToken() {
-        byte[] array = new byte[7];
-        new Random().nextBytes(array);
-        String generatedString = new String(array, StandardCharsets.UTF_8);
-        String refresh_token = generateToken(generatedString, refreshTokenValidityInMilliseconds);
-
-        return refresh_token;
-    }
-
-    public String generateToken(String payload, long expireLength) {
-        Claims claims = Jwts.claims().setSubject(payload);
         Date now = new Date();
-        Date validity = new Date(now.getTime() + expireLength);
-        
+        Date validity = new Date(now.getTime() + REFRESH_TOKEN_VALIDITY_IN_MILLISECONDS);
+
         return Jwts.builder()   // Access token 생성
-                .setClaims(claims)
                 .setIssuedAt(now)
                 .setExpiration(validity)    // 30초
-                .signWith(key, SignatureAlgorithm.HS256)
+                .signWith(SignatureAlgorithm.HS256, secretKey)
                 .compact();
     }
 
@@ -75,28 +92,66 @@ public class JwtTokenProvider {
         return new UsernamePasswordAuthenticationToken(principal, "", authorities);
     }
 
-    public boolean validateToken(String token) {
-        try {
-            Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token);
-            return true;
-        } catch(io.jsonwebtoken.security.SecurityException | MalformedJwtException e) {
-            log.info("Invalid JWT Token", e);
-        } catch(ExpiredJwtException e) {
-            log.info("Expired JWT Token", e);
-        } catch(UnsupportedJwtException e) {
-            log.info("Unsupported JWT Token", e);
-        } catch(IllegalArgumentException e) {
-            log.info("JWT claims string is empty", e);
-        }
-        return false;
+    // Jwt 토큰으로 인증 정보를 조회
+    public Authentication getAuthentication(String token) {
+        LoginInfo userDetails = ((LoginInfo)userDetailsService.loadUserByUsername(this.getProviderUserId(token)));
+        return new UsernamePasswordAuthenticationToken(userDetails, "", userDetails.getAuthorities());
     }
 
-    private Claims parseClaims(String accessToken) {
-        try {
-            return Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(accessToken).getBody();
-        } catch (ExpiredJwtException e) {
-            return e.getClaims();
+    // Jwt 토큰에서 회원 구별 정보 추출
+    public String getProviderUserId(String token) {
+        try
+        {
+            return Jwts.parser().setSigningKey(secretKey).parseClaimsJws(token).getBody().getSubject();
         }
+        catch (ExpiredJwtException e)
+        {
+            //e.printStackTrace();
+            return "Expired";
+        }
+        catch (JwtException e)
+        {
+            //e.printStackTrace();
+            return "Invalid";
+        }
+    }
+
+    public Cookie getCookie(HttpServletRequest req, String cookieName)
+    {
+        Cookie[] cookies = req.getCookies();
+        for (Cookie cookie : cookies) {
+            if (cookie.getName().equals(cookieName))
+                return cookie;
+        }
+        return null;
+    }
+
+    // Request의 Header에서 token 파싱
+    public String resolveToken(HttpServletRequest req, String headerName) {
+        return req.getHeader(headerName);
+    }
+
+    // Jwt 토큰의 유효성 + 만료일자 확인
+    public boolean validateToken(String jwtToken) {
+        Jws<Claims> claims = Jwts.parser().setSigningKey(secretKey).parseClaimsJws(jwtToken);
+        return !claims.getBody().getExpiration().before(new Date());
+    }
+
+    public Long remainExpiration(String token)
+    {
+        try {
+            return Jwts.parser().setSigningKey(secretKey).parseClaimsJws(token).getBody().getExpiration().getTime() - new Date().getTime();
+        }
+        catch (ExpiredJwtException e) {
+            return -1L;
+        }
+    }
+
+    public Boolean isLoggedOut(String accessToken)
+    {
+        if (accessToken == null)
+            return false;
+        return redisService.getStringValue(accessToken) != null;
     }
 
 }
